fix blockly scrollbar corruption

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,15 @@ html {
 }
 
 body{
-    text-align: center;
+    /*text-align: center;*/
     font-size: 1.4rem;
     font-family: "游ゴシック体", "Yu Gothic", YuGothic, "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", sans-serif;
     line-height: 1.6;
     min-height: 480px;
+}
+
+.centerize {
+    text-align: center;
 }
 body p{
     margin-top: 20px;
@@ -71,7 +75,7 @@ body p{
     box-shadow: 0 0 15px 0 #4262a0;
 }
 
-.header a{
+.header a, .game-header a {
     color: white;
 }
 
