--- a/assets/main.css
+++ b/assets/main.css
@@ -17,6 +17,7 @@ body {
 
 .wrapper {
 	margin-bottom: 16px;
+	margin-top: 8px;
 	display: flex;
 	flex-wrap: wrap;
 }
